@@ -1,3 +1,10 @@
+2011-02-09  David Edelsohn  <dje.gcc@gmail.com>
+
+	* config/rs6000/aix61.h (PROCESSOR_DEFAULT): Change to
+	PROCESSOR_POWER7.
+	(PROCESSOR_DEFAULT64): Same.
+	(RS6000_DEFAULT_LONG_DOUBLE_SIZE): Delete.
+
 2011-02-09  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
 
 	* config/mips/iris6.h (TARGET_C99_FUNCTIONS): Define.
